# w5500-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  flake.nix  memory.x
.cargo/: config.toml
.config/: lingo.dic
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
dhcp/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl
dhcp/.github/ISSUE_TEMPLATE/: bug_report.md
dhcp/.github/workflows/: ci.yml
dhcp/examples/: README.md
dhcp/fuzz/: Cargo.toml
dhcp/fuzz/fuzz_targets/: process.rs
dhcp/src/: lib.rs  pkt.rs  rand.rs
dhcp/tests/: end_to_end.rs
dns/: CHANGELOG.md  Cargo.toml  README.md  fuzz-coverage.sh
dns/examples/: mdns.rs  simple.rs
dns/fuzz/: Cargo.toml
dns/fuzz/fuzz_targets/: response.rs
dns/src/: header.rs  hostname.rs  lib.rs  mdns.rs  qclass.rs  qtype.rs  rand.rs
dns/tests/: response.rs
fuzz/: Cargo.toml
fuzz/src/: lib.rs
hl/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
hl/.cargo/: config.toml
hl/.github/workflows/: ci.yml
hl/examples/: dns.rs  http_server.rs  mqtt_client.rs
hl/src/: hostname.rs  io.rs  lib.rs  net.rs  tcp.rs  udp.rs
hl/tests/: common.rs  udp.rs
hl/testsuite/: Cargo.toml  README.md
hl/testsuite-assets/: Cargo.toml
hl/testsuite-assets/src/: lib.rs
hl/testsuite-peer/: Cargo.toml
hl/testsuite-peer/src/: main.rs
hl/testsuite/tests/: test.rs
ll/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl
ll/.github/workflows/: ci.yml
ll/src/: addr.rs  aio.rs  blocking.rs  eh0.rs  eh1.rs  lib.rs  net.rs  registers.rs  specifiers.rs  spi.rs
ll/src/blocking/: fdm.rs  mod.rs  vdm.rs  vdm_infallible.rs  vdm_infallible_gpio.rs
ll/src/eh/: fdm.rs  vdm.rs
ll/src/eh0/: fdm.rs  vdm.rs  vdm_infallible.rs  vdm_infallible_gpio.rs
ll/src/eh1/: fdm.rs  vdm.rs
ll/tests/: blocking.rs  net_convert.rs  net_format.rs  reg_format.rs  sn_conversion.rs  spi_header.rs
mqtt/: CHANGELOG.md  Cargo.toml  README.md  fuzz-coverage.sh
mqtt/examples/: tls.rs
mqtt/fuzz/: Cargo.toml
mqtt/fuzz/fuzz_targets/: process.rs
mqtt/src/: client_id.rs  connack.rs  connect.rs  data.rs  fixed_header.rs  fmt.rs  lib.rs  properties.rs  publish.rs  recv.rs  subscribe.rs  tls.rs
mqtt/tests/: connect.rs  fixture.rs  publish.rs  subscribe.rs
regsim/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
regsim/.github/workflows/: ci.yml
regsim/examples/: dns.rs  http_server.rs  mqtt_client.rs
regsim/src/: lib.rs  regmap.rs
regsim/tests/: tests.rs
sntp/: CHANGELOG.md  Cargo.toml  README.md  fuzz-coverage.sh
sntp/fuzz/: Cargo.toml
sntp/fuzz/fuzz_targets/: on_recv_interrupt.rs
sntp/src/: fixed_point.rs  fmt.rs  lib.rs  timestamp.rs
sntp/tests/: end_to_end.rs
src/: lib.rs
tests/: common.rs  udp.rs
testsuite/: Cargo.toml  README.md
testsuite-assets/src/: lib.rs
testsuite-peer/: Cargo.toml
testsuite-peer/src/: main.rs
testsuite/src/: main.rs
testsuite/tests/: test.rs
tls/: CHANGELOG.md  Cargo.toml  README.md
tls/afl/: Cargo.toml  README.md  run.sh
tls/afl/src/: gencorpus.rs  main.rs  replay.rs  shared.rs
tls/examples/: mqtt_psk.rs
tls/fuzz/: Cargo.toml
tls/fuzz/fuzz_targets/: process.rs
tls/src/: alert.rs  cipher_suites.rs  extension.rs  io.rs  key_schedule.rs  lib.rs  record.rs
tls/src/crypto/: mod.rs  p256.rs  record.rs
tls/src/crypto/aes/: cipher.rs  gcm.rs  ghash.rs  mod.rs
tls/src/crypto/p256/: cm4.rs  rust_crypto.rs
tls/src/handshake/: client_hello.rs  encrypted_extensions.rs  finished.rs  key_update.rs  mod.rs  server_hello.rs
