[workspace]
resolver = "2"
members = [
    "dhcp",
    "dns",
    "fuzz",
    "hl",
    "ll",
    "mqtt",
    "regsim",
    "sntp",
    "testsuite",
    "tls",
    "tls/afl",
]
default-members = [
    "dhcp",
    "dns",
    "fuzz",
    "hl",
    "ll",
    "mqtt",
    "regsim",
    "sntp",
    "tls",
]

# TODO: remove
# https://github.com/rust-embedded/embedded-hal/pull/421
[patch.crates-io]
embedded-hal = { git = "http://github.com/newAM/embedded-hal", branch = "eha-nightly" }
embedded-hal-async = { git = "http://github.com/newAM/embedded-hal", branch = "eha-nightly" }
