[workspace]
resolver = "2"
members = [
    "dhcp",
    "dns",
    "fuzz",
    "hl",
    "ll",
    "mqtt",
    "regsim",
    "sntp",
    "testsuite",
    "tls",
    "tls/afl",
]
default-members = [
    "dhcp",
    "dns",
    "fuzz",
    "hl",
    "ll",
    "mqtt",
    "regsim",
    "sntp",
    "tls",
]

# TODO: remove
# https://github.com/rust-embedded/embedded-hal/pull/421
[patch.crates-io]
embedded-hal = { git = "http://github.com/rust-embedded/embedded-hal", rev = "f565750dbd3d27f6f66a14e1f5adfd5b850cc726" }
embedded-hal-async = { git = "http://github.com/rust-embedded/embedded-hal", rev = "f565750dbd3d27f6f66a14e1f5adfd5b850cc726" }
