[workspace]
resolver = "2"
members = [
    "dhcp",
    "dns",
    "fuzz",
    "hl",
    "ll",
    "mqtt",
    "regsim",
    "sntp",
    "testsuite",
    "tls",
    "tls/afl",
]
default-members = [
    "dhcp",
    "dns",
    "fuzz",
    "hl",
    "ll",
    "mqtt",
    "regsim",
    "sntp",
    "tls",
]

[workspace.package]
edition = "2024"
authors = ["Alex Martens <alex@thinglab.org>"]
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
