[package]
name = "w5500-dhcp"
version = "0.7.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "DHCP client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["dhcp", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
defmt = ["w5500-hl/defmt", "dep:defmt"]
eh0 = ["w5500-hl/eh0"]
eh1 = ["w5500-hl/eh1"]

[dependencies]
w5500-hl = { path = "../hl", version = "0.12.0" }
defmt = { version = "0.3.8", features = ["ip_in_core"], optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
dhcproto = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
stderrlog = "0.6"
w5500-hl.path = "../hl"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
