[package]
name = "w5500-dns"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "DNS client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["dns", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
embedded-hal = ["w5500-hl/embedded-hal"]
defmt = ["w5500-hl/defmt", "dep:defmt"]
std = ["w5500-hl/std"]

[dependencies]
w5500-hl = { path = "../hl", version = "0.9.0" }
defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
stderrlog = "0.5"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = false
features = ["log", "std", "embedded-hal"]
rustdoc-args = ["--cfg", "docsrs"]
