[package]
name = "w5500-dns"
version = "0.4.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "DNS client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["dns", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
defmt = ["w5500-hl/defmt", "dep:defmt"]
eh0 = ["w5500-hl/eh0"]
eh1 = ["w5500-hl/eh1"]

[dependencies]
w5500-hl = { path = "../hl", version = "0.11.0" }
defmt = { version = "0.3.7", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
stderrlog = "0.6"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
