[package]
name = "w5500-dns"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "DNS client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["dns", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
defmt = ["w5500-hl/defmt", "dep:defmt"]
eh0 = ["w5500-hl/eh0"]
eh1 = ["w5500-hl/eh1"]

[dependencies]
w5500-hl = { path = "../hl", version = "0.12.0" }
defmt = { version = "1.0.1", features = ["ip_in_core"], optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
log = "0.4"
rand_core = "0.10.0"
stderrlog = "0.6"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
