[package]
name = "w5500-hl"
version = "0.11.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "Driver for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["spi", "driver", "embedded-hal-driver", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
defmt = ["w5500-ll/defmt", "dep:defmt"]
eh0 = ["w5500-ll/eh0"]
eh1 = ["w5500-ll/eh1"]
ip_in_core = ["w5500-ll/ip_in_core"]
std = ["w5500-ll/std"]

[dependencies]
defmt = { version = "0.3.4", optional = true }
w5500-ll = { path = "../ll", version = "0.12.0" }

[dev-dependencies]
embedded-hal = "=1.0.0-rc.3"
w5500-ll = { path = "../ll", version = "0.12.0", features = ["eh1", "defmt"] }
ehm = { package = "embedded-hal-mock", git = "https://github.com/dbrgn/embedded-hal-mock.git", rev = "0dfd89fd554fa0c227ca124398c9164d85f53018", features = ["eh0", "eh1", "embedded-hal-async"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
