[package]
name = "w5500-hl"
version = "0.12.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Driver for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["spi", "driver", "embedded-hal-driver", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
defmt = ["w5500-ll/defmt", "dep:defmt"]
eh0 = ["w5500-ll/eh0"]
eh1 = ["w5500-ll/eh1"]

[dependencies]
defmt = { version = "0.3.8", features = ["ip_in_core"], optional = true }
w5500-ll = { path = "../ll", version = "0.13.0" }

[dev-dependencies]
embedded-hal = "1"
w5500-ll = { path = "../ll", version = "0.13.0", features = ["eh1", "defmt"] }
ehm = { package = "embedded-hal-mock", version = "0.11.1", features = ["eh0", "eh1", "embedded-hal-async"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
