[package]
name = "w5500-ll"
version = "0.10.4"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "Low level driver for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["spi", "driver", "embedded-hal-driver", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
async = []
defmt = ["dep:defmt"]
eh1 = ["dep:eh1"]
eha0a = ["async", "dep:eha0a", "dep:eh1"]
ip_in_core = ["defmt?/ip_in_core"]
std = []

[dependencies]
defmt = { version = "0.3.4", optional = true }
eh0 = { package = "embedded-hal", version = "0.2.7", optional = true }
eh1 = { package = "embedded-hal", version = "=1.0.0-alpha.11", optional = true }
eha0a = { package = "embedded-hal-async", version = "=0.2.0-alpha.2", optional = true }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros"] }

[dev-dependencies.ehm]
package = "embedded-hal-mock"
git = "https://github.com/newAM/embedded-hal-mock"
branch = "eh1-alpha.11"
features = ["embedded-hal-async", "eh0", "eh1"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
