[package]
name = "w5500-ll"
version = "0.12.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "Low level driver for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["spi", "driver", "embedded-hal-driver", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
defmt = ["dep:defmt"]
eh1 = ["dep:eh1"]
eha1 = ["dep:eha1", "dep:eh1"]

[dependencies]
defmt = { version = "0.3.8", features = ["ip_in_core"], optional = true }
eh0 = { package = "embedded-hal", version = "0.2.7", optional = true }
eh1 = { package = "embedded-hal", version = "1", optional = true }
eha1 = { package = "embedded-hal-async", version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros"] }
ehm = { package = "embedded-hal-mock", version = "0.10.0", features = ["eh0", "eh1", "embedded-hal-async"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
