[package]
name = "w5500-mqtt"
version = "0.1.2"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "MQTT client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["MQTT", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
defmt = ["w5500-hl/defmt", "dep:defmt", "w5500-tls?/defmt"]
eh0 = ["w5500-hl/eh0"]
eh1 = ["w5500-hl/eh1"]
ip_in_core = ["w5500-hl/ip_in_core"]
log = ["dep:log", "w5500-tls?/log"]
p256-cm4 = ["w5500-tls?/p256-cm4"]
std = ["w5500-hl/std", "w5500-tls?/std"]
w5500-tls = ["dep:w5500-tls"]

[dependencies]
defmt = { version = "0.3.4", optional = true }
log = { version = "0.4", optional = true }
w5500-hl = { path = "../hl", version = "0.9.0" }
w5500-tls = { path = "../tls", version = "0.1.3", optional = true }

[dev-dependencies]
bytes = "1"
log = "0.4"
mqttbytes = "0.6"
rand_core = { version = "0.6", features = ["getrandom"] }
stderrlog = "0.5"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
