[package]
name = "w5500-mqtt"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "MQTT client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["MQTT", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
defmt = ["w5500-hl/defmt", "dep:defmt", "w5500-tls?/defmt"]
eh0 = ["w5500-hl/eh0"]
eh1 = ["w5500-hl/eh1"]
log = ["dep:log", "w5500-tls?/log"]
p256-cm4 = ["w5500-tls?/p256-cm4"]
w5500-tls = ["dep:w5500-tls"]

[dependencies]
defmt = { version = "1.0.1", features = ["ip_in_core"], optional = true }
log = { version = "0.4", optional = true }
w5500-hl = { path = "../hl", version = "0.12.0" }
w5500-tls = { path = "../tls", version = "0.4.0", optional = true }

[dev-dependencies]
bytes = "1"
log = "0.4"
mqttbytes = "0.6"
rand_chacha = "0.9"
stderrlog = "0.6"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
