[package]
name = "w5500-regsim"
version = "0.1.0-alpha.9"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "Register simulation for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["W5500", "wiznet"]
categories = ["embedded", "development-tools"]
homepage = "https://github.com/newAM/w5500-rs"

[dependencies]
log = "0.4"
w5500-ll = { path = "../ll", version = "0.12.0" }

[dev-dependencies]
trust-dns-client = "0.23"
w5500-hl.path = "../hl"
stderrlog = "0.5"
httparse = { version = "1", default-features = false }
tokio = { version = "1.21.1", features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
