[package]
name = "w5500-regsim"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Register simulation for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["W5500", "wiznet"]
categories = ["embedded", "development-tools"]

[dependencies]
log = "0.4"
w5500-ll = { path = "../ll", version = "0.13.0" }

[dev-dependencies]
trust-dns-client = "0.23"
w5500-hl.path = "../hl"
stderrlog = "0.6"
httparse = { version = "1", default-features = false }
tokio = { version = "1.21.1", features = ["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
