[package]
name = "w5500-sntp"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "SNTP client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["sntp", "driver", "embedded-hal-driver", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
embedded-hal = ["w5500-hl/embedded-hal"]
defmt = ["w5500-hl/defmt", "dep:defmt"]
std = ["w5500-hl/std"]

[dependencies]
chrono = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }
num-rational = { version = "0.4", default-features = false, optional = true }
time = { version = "0.3", default-features = false, optional = true }
w5500-hl = { path = "../hl", version = "0.7.1" }

[dev-dependencies]
log = "0.4"
stderrlog = "0.5"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = false
features = ["log", "std", "embedded-hal", "chrono", "num-rational", "time"]
rustdoc-args = ["--cfg", "docsrs"]
