[package]
name = "w5500-sntp"
version = "0.4.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "SNTP client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["sntp", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
chrono = ["dep:chrono"]
defmt = ["w5500-hl/defmt", "dep:defmt"]
eh0 = ["w5500-hl/eh0"]
eh1 = ["w5500-hl/eh1"]
num-rational = ["dep:num-rational"]
time = ["dep:time"]

[dependencies]
chrono = { version = "0.4.32", default-features = false, optional = true }
defmt = { version = "0.3.8", features = ["ip_in_core"], optional = true }
log = { version = "0.4", default-features = false, optional = true }
num-rational = { version = "0.4", default-features = false, optional = true }
time = { version = "0.3", default-features = false, optional = true }
w5500-hl = { path = "../hl", version = "0.11.0" }

[dev-dependencies]
log = "0.4"
stderrlog = "0.6"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
