[package]
name = "testsuite"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
publish = false
edition = "2021"

[dependencies]
libftd2xx = "0.32.0"
log = "0.4"
rand_core = { version = "0.6.3", features = ["getrandom"] }
stderrlog = "0.5"

w5500-dhcp = { path = "../dhcp", features = ["std", "embedded-hal", "log"] }
w5500-dns = { path = "../dns", features = ["std", "embedded-hal", "log"] }
w5500-hl = { path = "../hl", features = ["std", "embedded-hal"] }
w5500-ll = { path = "../ll", features = ["std", "embedded-hal"] }
w5500-mqtt = { path = "../mqtt", features = ["std", "embedded-hal", "log"] }
w5500-sntp = { path = "../sntp", features = ["std", "embedded-hal", "log", "chrono"] }
w5500-tls = { path = "../tls", features = ["std", "embedded-hal", "log"] }

[dependencies.ftdi-embedded-hal]
git = "https://github.com/ftdi-rs/ftdi-embedded-hal"
branch = "eh1"
features = ["libftd2xx", "libftd2xx-static"]
