[package]
name = "testsuite"
version = "0.1.0"
authors = ["Alex Martens <alex@thinglab.org>"]
publish = false
edition = "2021"

[dependencies]
ftdi-embedded-hal = { version = "0.22.0", features = ["libftd2xx", "libftd2xx-static"] }
log = "0.4"
rand_core = { version = "0.9", features = ["os_rng"] }
stderrlog = "0.6"

w5500-dhcp = { path = "../dhcp", features = ["eh1", "log"] }
w5500-dns = { path = "../dns", features = ["eh1", "log"] }
w5500-hl = { path = "../hl", features = ["eh1"] }
w5500-ll = { path = "../ll", features = ["eh1"] }
w5500-mqtt = { path = "../mqtt", features = ["eh1", "log"] }
w5500-sntp = { path = "../sntp", features = ["eh1", "log", "chrono"] }
w5500-tls = { path = "../tls", features = ["eh1", "log"] }
