[package]
name = "w5500-tls"
version = "0.1.3"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "TLS client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["tls", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
eh0 = ["w5500-hl/eh0"]
eh1 = ["w5500-hl/eh1"]
defmt = ["w5500-hl/defmt", "dep:defmt", "heapless/defmt-impl"]
std = ["w5500-hl/std"]

[dependencies]
w5500-hl = { path = "../hl", version = "0.9.0" }

cfg-if = "1"
heapless = { version = "0.7", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
p256 = { version = "0.11", default-features = false, features = ["arithmetic", "ecdh"] }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2", default-features = false }

# optional
defmt = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
p256-cm4 = { version = "0.3", optional = true }

[dev-dependencies]
bytes = "1"
log = "0.4"
mqttbytes = "0.6"
rand_core = { version = "0.6", features = ["getrandom"] }
stderrlog = "0.5"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = false
features = ["log", "std", "eh0", "eh1"]
rustdoc-args = ["--cfg", "docsrs"]
