[package]
name = "w5500-tls"
version = "0.3.0"
authors = ["Alex Martens <alex@thinglab.org>"]
edition = "2021"
repository = "https://github.com/newAM/w5500-rs"
license = "MIT"
description = "TLS client for the Wiznet W5500 internet offload chip."
readme = "README.md"
keywords = ["tls", "W5500", "wiznet"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/newAM/w5500-rs"

[features]
defmt = ["w5500-hl/defmt", "dep:defmt", "heapless/defmt-03"]
eh0 = ["w5500-hl/eh0"]
eh1 = ["w5500-hl/eh1"]

[dependencies]
w5500-hl = { path = "../hl", version = "0.11.0" }

cfg-if = "1"
heapless = { version = "0.8", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdh"] }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2", default-features = false }

# optional
defmt = { version = "0.3.4", optional = true, features = ["ip_in_core"] }
log = { version = "0.4", optional = true }
p256-cm4 = { version = "0.3", optional = true }

[dev-dependencies]
bytes = "1"
log = "0.4"
mqttbytes = "0.6"
rand_core = { version = "0.6", features = ["getrandom"] }
stderrlog = "0.6"
w5500-regsim.path = "../regsim"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
