[package]
name = "w5500-dhcp-fuzz"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
w5500-fuzz.path = "../../fuzz"
w5500-dhcp.path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "process"
path = "fuzz_targets/process.rs"
test = false
doc = false
