[package]
name = "w5500-sntp-fuzz"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
w5500-sntp.path = ".."
w5500-fuzz.path = "../../fuzz"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "on_recv_interrupt"
path = "fuzz_targets/on_recv_interrupt.rs"
test = false
doc = false
