[package]
name = "w5500-tls-afl"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
afl = "0.17"
rand_core = "0.10"
stderrlog = "0.6"
w5500-fuzz.path = "../../fuzz"
w5500-regsim.path = "../../regsim"
w5500-tls = { path = "..", features = ["log"] }

[[bin]]
name = "gencorpus"
path = "src/gencorpus.rs"
test = false
doc = false

[[bin]]
name = "replay"
path = "src/replay.rs"
test = false
doc = false
